tdf#160884: Apply scale to position of embedded images in Type 3 fonts

Regression from:

commit bc3f6c3a47411a3b5dafadca4e5c55cd24e30662
Author: Khaled Hosny <khaled@libreoffice.org>
Date:   Tue Aug 22 10:47:33 2023 +0300

    tdf#155610: Workaround Acrobat bug with Type 3 fonts and unusual UPEM

Change-Id: I5e352292268d19fb8348a038d251f2d395a0be46
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/167830
Reviewed-by: Stéphane Guillou <stephane.guillou@libreoffice.org>
Reviewed-by: خالد حسني <khaled@libreoffice.org>
Tested-by: Jenkins
(cherry picked from commit 44f2bc12779645bce1000289caf9c66804ecb14e)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/167815
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>